--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,10 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
+      {% if page.description %}
+      <meta name="description" content="{{ page.description }}">
+      {% else %}
+      <meta name="description" content="{{ site.description }}">
+      {% endif %}
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
     <title>{{ page.title }}</title>
+      {% include og.html %}
 
     <!-- CSS -->
     <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
