make console host dynamic

--- a/_includes/blog-extras.html
+++ b/_includes/blog-extras.html
@@ -7,7 +7,7 @@
 
     <section class="console">
       <h4>Dive in</h4>
-      <p>Ready to get started? <a href="https://console.convox.com/grid/signup">Sign up</a> for a Convox account now.</p>
+      <p>Ready to get started? <a href="https://{{ site.console_host }}/grid/signup">Sign up</a> for a Convox account now.</p>
     </section>
 
     <section>
