--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -76,7 +76,7 @@
             <li><a href="/how">How It Works</a></li>
             <li><a href="/enterprise">Enterprise</a></li>
             <li><a href="/pricing">Pricing</a></li>
-            <li class="login"><a href="https://console.convox.com/grid/login">Log in</a></li>
+            <li class="login"><a href="https://{{ site.console_host }}/grid/login">Log in</a></li>
           </ul>
         </div>
       </div>
