Django migration blog post

--- a/_includes/blog-extras.html
+++ b/_includes/blog-extras.html
@@ -51,10 +51,9 @@
     </section>
 
     <section class="slack-join">
-      <h4>Join us on Slack</h4>
-      <script async defer src="https://invite.convox.com/slackin.js"></script>
+      <h4>Join the Convox Community</h4>
       <p>
-        We have an active and friendly community.<br />
+        Check out our <a href="https://community.convox.com/">Community Forum</a> and get answers to all your questions about Convox
       </p>
     </section>
   </div>
