--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -39,13 +39,13 @@
 						<div class="card-body d-flex justify-content-center">
 							<ul class="items d-flex justify-content-center flex-wrap align-items-center">
 								<li><i class="fab fa-aws"></i>
-								<li>CI</i>
-								<li>DD</i>
+								<li><img src="/images/integrations/circleci.png"></i>
+								<li><img src="/images/integrations/datadog.png"></i>
 								<li><i class="fab fa-github"></i>
 								<li><i class="fab fa-gitlab"></i>
-								<li>PT</i>
+								<li><img src="/images/integrations/papertrail.png"></i>
 								<li><i class="fab fa-slack"></i>
-								<li>TR</i>
+								<li><img src="/images/integrations/travisci.png"></i>
 							</ul>
 						</div>
 					</div>
@@ -58,7 +58,7 @@
 						<div class="card-body d-flex justify-content-center">
 							<ul class="items">
 								<li><i class="fab fa-docker"></i>
-								<li>K8</i>
+								<li><img src="/images/integrations/kubernetes.png"></i>
 							</ul>
 						</div>
 					</div>
