--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -36,8 +36,8 @@
 						<div class="card-header">
 							<h1>Simple Integrations</h1>
 						</div>
-						<div class="card-body d-flex justify-content-center">
-							<ul class="items d-flex justify-content-center flex-wrap align-items-center">
+						<div class="card-body">
+							<ul class="items d-flex flex-wrap align-items-center justify-content-around">
 								<li><i class="fab fa-aws"></i>
 								<li><img src="/images/integrations/circleci.png"></i>
 								<li><img src="/images/integrations/datadog.png"></i>
@@ -55,9 +55,9 @@
 						<div class="card-header">
 							<h1>Modern Stack</h1>
 						</div>
-						<div class="card-body d-flex justify-content-center">
-							<ul class="items">
-								<li><i class="fab fa-docker"></i>
+						<div class="card-body">
+							<ul class="items d-flex justify-content-around">
+								<li><i class="fab fa-docker" style="margin-top: 12px;"></i>
 								<li><img src="/images/integrations/kubernetes.png"></i>
 							</ul>
 						</div>
@@ -68,8 +68,8 @@
 						<div class="card-header">
 							<h1>Instant Compliance</h1>
 						</div>
-						<div class="card-body d-flex justify-content-center">
-							<ul class="items">
+						<div class="card-body">
+							<ul class="items d-flex justify-content-around">
 								<li><i class="far fa-check-square mr-2 text-success"></i>HIPAA</li>
 								<li><i class="far fa-check-square mr-2 text-success"></i>PCI</li>
 							</ul>
