--- a/pages/index.tmpl
+++ b/pages/index.tmpl
@@ -13,7 +13,7 @@
 						Onboard new developers in minutes.
 					</h3>
 					<div class="buttons">
-						<a class="btn btn-primary text-light" href="https://console.convox.com/signup">
+						<a class="btn btn-primary text-light" href="https://docs.convox.com/introduction/getting-started">
 							Get Started
 							<i class="far fa-arrow-alt-circle-right ml-1"></i>
 						</a>
@@ -139,7 +139,7 @@
 	<div class="quotes d-block">
 		<div class="container text-center">
 			<div class="row">
-				<blockquote class="blockquote col-12 col-lg-4">
+				<blockquote class="blockquote col-12 col-lg-4 pr-lg-5">
 					Having Convox on board has freed up roughly 25% of our engineer's time every week. The level of service they provide is truly astounding.
 					<footer class="blockquote-footer">Arthur Weagel, <cite>Podium</cite></footer>
 				</blockquote>
@@ -147,14 +147,12 @@
 					The Convox advantage is that operations work is reduced to an absolute minimum. We used to have an extra consultant just to keep our servers safe, taking care of updates, logs and backups, whereas now our developers manage the entire infrastructure by themselves.	
 					<footer class="blockquote-footer">Cesare Navorotto, <cite>Monrif</cite></footer>
 				</blockquote>
-				<blockquote class="blockquote col-12 col-lg-4 pt-4 pt-lg-0">
+				<blockquote class="blockquote col-12 col-lg-4 pt-4 pt-lg-0 pl-lg-5">
 					Convox helped us migrate everything to AWS quicker than I ever thought was possible. Unlocking all the advantages of the cloud through Convox is easily one of the best decisions we made.
 					<footer class="blockquote-footer">Ryan Jackson, <cite>Paid Labs</cite></footer>
 				</blockquote>
 			</div>
 		</div>
 	</div>
-
-	<div style="height:24px;"></div>
 
 {{ end }}
