--- a/assets/site.scss
+++ b/assets/site.scss
@@ -233,6 +233,71 @@ body {
 	}
 }
 
+.blog {
+	background-color: #fff;
+
+	&.index{
+		.post a {
+			font-size: 1.7em;
+			font-weight: 700;
+			letter-spacing: 0.8;
+
+			&:hover {
+				text-decoration: none;
+				color: rgb(25,78,131);
+			}
+		}
+
+		.post .date {
+		}
+	}
+
+	&.post {
+		font-size: 1.2em;
+		letter-spacing: 0.3;
+
+		h1, h2, h3, h4, h5, h6 {
+			font-weight: 700;
+			letter-spacing: 0.8;
+		}
+
+		h1 {
+			margin-bottom: 36px;
+			font-size: 1.8em;
+		}
+
+		h2 {
+			margin-bottom: 10px;
+			margin-top: 36px;
+			color: #666;
+			font-size: 1.6em;
+		}
+
+		h3 {
+			color: #888;
+			font-size: 1.4em;
+			margin-top: 24px;
+		}
+
+		h4 {
+			color: #888;
+			font-size: 1.2em;
+			margin-top: 24px;
+		}
+
+		img {
+			max-width: 100%;
+		}
+
+		pre {
+			background-color: #eee;
+			border: 1px #bbb solid;
+			border-radius: 4px;
+			padding: 12px;
+		}
+	}
+}
+
 $fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import '~@fortawesome/fontawesome-free/scss/solid';
