--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -23,9 +23,9 @@
 
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="navbar-nav ml-auto mr-2">
-							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/blog">Blog</a></li>
+							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "blog" }}active{{ end }}"><a class="nav-link" href="/blog">Blog</a></li>
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://docs.convox.com">Documentation</a></li>
-							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://convox.com/pricing">Pricing</a></li>
+							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "pricing" }}active{{ end }}"><a class="nav-link" href="/pricing">Pricing</a></li>
 						</ul>
 
 						<ul class="navbar-nav ml-4 d-none d-lg-flex">
