--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -39,10 +39,10 @@
 					</div>
 				</div>
 			</nav>
-			<div class="content">
+			<div class="content {{.Active}}-content">
 				{{ template "content" . }}
 			</div>
-			<nav class="navbar navbar-expand fixed-bottom navbar-dark bg-dark text-light">
+			<nav class="navbar navbar-expand fixed-bottom navbar-dark text-light">
 				<div class="container">
 					<ul class="navbar-nav">
 						<li class="nav-item pl-3">
