--- a/pages/blog/post.tmpl
+++ b/pages/blog/post.tmpl
@@ -1,7 +1,7 @@
 {{ define "content" }}
 	<div class="container">
 		{{ with .Post }}
-			<div class="blog post p-5">
+			<div class="blog post p-4 pl-5 pr-5">
 				<h1>{{.Title}}</h1>
 				<div class="body">
 					{{ body .Body }}
