--- a/assets/site.scss
+++ b/assets/site.scss
@@ -23,7 +23,7 @@ $container-max-widths: (
 @import "~bootstrap/scss/bootstrap";
 
 body {
-	background-color: #e3e6e9;
+	background-color: rgb(48,55,62);
 	display: block;
 	padding-top: 64px;
 	padding-bottom: 56px;
@@ -40,8 +40,7 @@ body {
 	background-color: rgb(16,25,33);
 }
 
-.intro {
-	background-color: rgb(48,55,62);
+div.intro {
 	color: #fff;
 	display: block;
 	padding-top: 60px;
@@ -83,7 +82,8 @@ body {
 	}
 }
 
-.features {
+div.features {
+	background-color: #e3e6e9;
 	padding-top: 40px;
 	padding-bottom: 40px;
 
@@ -153,7 +153,7 @@ body {
 	}
 }
 
-.customers {
+div.customers {
 	background-color: #fff;
 	padding-top: 40px;
 	padding-bottom: 40px;
@@ -187,7 +187,8 @@ body {
 	}
 }
 
-.quotes {
+div.quotes {
+	background-color: #e3e6e9;
 	padding-top: 40px;
 	padding-bottom: 20px;
 
@@ -198,7 +199,7 @@ body {
 	}
 }
 
-.terms {
+div.terms {
 	background-color: #fff;
 	padding: 20px;
 	padding-bottom: 10px;
@@ -233,11 +234,7 @@ body {
 	}
 }
 
-.blog-content {
-	background-color: rgb(48,55,62);
-}
-
-.blog {
+div.blog {
 	background-color: #fff;
 
 	&.index{
@@ -304,6 +301,89 @@ body {
 		p {
 			margin-top: 24px;
 		}
+	}
+}
+
+section.plans {
+	background-color: rgb(48,55,62);
+
+	h1.title {
+		color: #e3e6e9;
+		font-weight: 700;
+		letter-spacing: 0.6;
+	}
+	
+	.plan {
+		margin-left: 10px;
+		margin-right: 10px;
+		text-align: center;
+
+		h1 {
+			font-size: 1.6em;
+			font-weight: 750;
+			letter-spacing: 0.6;
+			margin: 0;
+		}
+
+		li.pricing {
+			font-size: 1.3em;
+			font-weight: 700;
+			letter-spacing: 0.3;
+
+			&.monthly:after {
+				content: "/mo";
+				font-weight: normal;
+			}
+		}
+
+		ul.features {
+			list-style-type: none;
+			padding: 0;
+
+			li {
+				color: #444;
+				margin-bottom: 10px;
+
+				&.important {
+					color: #222;
+					font-size: 1.1em;
+					font-weight: 700;
+					letter-spacing: 0.2;
+				}
+
+				&:last-child {
+					margin-bottom: 0;
+				}
+			}
+		}
+
+		&:first-child {
+			margin-left: 0;
+		}
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+}
+
+body.pricing {
+	background-color: #e3e6e9;
+}
+
+section.general {
+	h1 {
+		color: #444;
+		font-size: 2.2em;
+		font-weight: 700;
+		letter-spacing: 0.6;
+	}
+
+	h2 {
+		font-size: 1.3em;
+		font-weight: 700;
+		letter-spacing: 0.3;
+		margin-bottom: 24px;
 	}
 }
 
