--- a/pages/pricing.tmpl
+++ b/pages/pricing.tmpl
@@ -86,13 +86,12 @@
 
 	<section class="general pt-3 pb-3 pt-sm-5 pb-sm-5">
 		<div class="container text-center">
-			<h1 class="mb-3 mb-sm-5">Features included in every plan</h1>
+			<h1 class="mb-3 mb-sm-5">Core features included in every plan</h1>
 			<div class="row">
 				<div class="col-12 col-sm-6 col-lg-3 mt-3">
 					<h2>Workflows</h2>
-					<p>Continuous Deployment</p>
 					<p>Automated Testing</p>
-					<p>Pre-Deploy Migrations</p>
+					<p>Continuous Deployment</p>
 				</div>
 				<div class="col-12 col-sm-6 col-lg-3 mt-3">
 					<h2>Integrations</h2>
