updated pricing, new post

--- a/pages/pricing.tmpl
+++ b/pages/pricing.tmpl
@@ -28,7 +28,6 @@
 							<li class="list-group-item">
 								<ul class="features">
 									<li>Includes 3 Users</li>
-									<li>Deploy Keys</li>
 									<li>Audit Logs</li>
 								</ul>
 							</li>
@@ -46,7 +45,6 @@
 							<li class="list-group-item">
 								<ul class="features">
 									<li>Includes 5 Users</li>
-									<li>Deploy Keys</li>
 									<li>Audit Logs</li>
 									<li>Role-Based Access Control</li>
 									<li class="important">Business-Day Support</li>
@@ -66,11 +64,10 @@
 							<li class="list-group-item">
 								<ul class="features">
 									<li>Unlimited Users</li>
-									<li>Deploy Keys</li>
 									<li>Audit Logs</li>
 									<li>Role-Based Access Control</li>
-									<li>LDAP Authentication</li>
-									<li class="important">Private Installation</li>
+									<li>Single Sign-On</li>
+									<li class="important">Self-Hosted Console</li>
 									<li class="important">24/7 Support</li>
 								</ul>
 							</li>
