--- a/pages/privacy.tmpl
+++ b/pages/privacy.tmpl
@@ -4,7 +4,7 @@
     <div class="terms">
       <h1>Convox Privacy Policy</h1>
 
-      This privacy policy describes the information that Convox, Inc. collects about users of Convox Console (<a href="https://console.convox.com">https://console.convox.com</a>, how it collects that information, and how it uses and shares that information.
+      This privacy policy describes the information that Convox, Inc. collects about users of Convox Console (<a href="https://console.convox.com">https://console.convox.com</a>), how it collects that information, and how it uses and shares that information.
 
       Convox may change this policy by posting a dated revision to <a href="/privacy">https://convox.com/privacy</a>.
 
