--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -9,6 +9,12 @@
       <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 
 			<script src="/assets/site.js"></script>
+          <script>
+            !function(){var analytics=window.analytics=window.analytics||[];if(!analytics.initialize)if(analytics.invoked)window.console&&console.error&&console.error("Segment snippet included twice.");else{analytics.invoked=!0;analytics.methods=["trackSubmit","trackClick","trackLink","trackForm","pageview","identify","reset","group","track","ready","alias","debug","page","once","off","on"];analytics.factory=function(t){return function(){var e=Array.prototype.slice.call(arguments);e.unshift(t);analytics.push(e);return analytics}};for(var t=0;t<analytics.methods.length;t++){var e=analytics.methods[t];analytics[e]=analytics.factory(e)}analytics.load=function(t,e){var n=document.createElement("script");n.type="text/javascript";n.async=!0;n.src="https://cdn.segment.com/analytics.js/v1/"+t+"/analytics.min.js";var a=document.getElementsByTagName("script")[0];a.parentNode.insertBefore(n,a);analytics._loadOptions=e};analytics.SNIPPET_VERSION="4.1.0";
+              analytics.load("{{ env "segment_token" }}");
+              analytics.page();
+            }}();
+          </script>
 		</head>
 		<body class="{{.Active}}">
 			<nav class="navbar navbar-expand-md fixed-top navbar-dark">
@@ -46,7 +52,9 @@
 				<div class="container">
 					<ul class="navbar-nav d-none d-sm-block">
 						<li class="nav-item pl-3">
-							&copy; 2019 Convox, Inc. All rights reserved.
+							&copy; <script type="text/javascript">
+                          document.write(new Date().getFullYear());
+                        </script> Convox, Inc. All rights reserved.
 						</li>
 					</ul>
 					<ul class="navbar-nav pr-2">
