--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -3,22 +3,27 @@
 <div class="intro">
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-6 col-xl-5 col-xxl-6">
+      <div class="col-10 col-lg-6 col-xl-5 col-xxl-6">
         <h1>Enterprise Container Management</h1>
       </div>
-      <div class="col-12 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
+      <div class="col-8 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
         <div class="text-right cli" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
           <i class="fas fa-wrench fa-2x"></i> Centrally control host and environment configuration
         </div>
       </div>
-      <div class="col-12 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
+      <div class="col-8 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
         <div class="text-right cli" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
           <i class="far fa-check-square fa-2x"></i> Self hosted console for PCI and HIPAA compliance
         </div>
       </div>
+      <div class="col-8 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
+        <div class="text-right cli" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
+          <i class="fas fa-lock fa-2x"></i> Enterprise Grade Security and Encryption
+        </div>
+      </div>
     </div>
     <div class="row">
-      <div class="col-12 col-lg-6 col-xl-5 col-xxl-6">
+      <div class="col-10 col-lg-6 col-xl-5 col-xxl-6">
         <h2>Made Easy</h2>
         <div class="buttons">
           <a class="btn btn-primary text-light" href="mailto:sales@convox.com?subject=Enterprise inquiry">
@@ -27,16 +32,21 @@
           </a>
         </div>
       </div>
-      <div class="col-12 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
+      <div class="col-8 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
         <div class="text-right cli" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
           <i class="fas fa-hand-holding-usd fa-2x"></i>
           Manage utilization and costs centrally
         </div>
       </div>
-      <div class="col-12 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
+      <div class="col-8 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
         <div class="text-right cli" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
           <i class="fas fa-network-wired fa-2x"></i>
           Integrate with all your existing platforms and systems
+        </div>
+      </div>
+      <div class="col-8 col-lg-2 col-xl-3 col-xxl-2 pt-5 pt-lg-0">
+        <div class="text-right cli" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
+          <i class="fas fa-phone fa-2x"></i> 24x7 support with a 1 hour SLA
         </div>
       </div>
     </div>
