--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -52,9 +52,7 @@
 				<div class="container">
 					<ul class="navbar-nav d-none d-sm-block">
 						<li class="nav-item pl-3">
-							&copy; <script type="text/javascript">
-                          document.write(new Date().getFullYear());
-                        </script> Convox, Inc. All rights reserved.
+							&copy; 2019 Convox, Inc. All rights reserved.
 						</li>
 					</ul>
 					<ul class="navbar-nav pr-2">
