features page first draft WIP

--- a/assets/site.scss
+++ b/assets/site.scss
@@ -153,6 +153,50 @@ div.features {
 	}
 }
 
+div.feature {
+	background-color: #fff;
+	padding-top: 40px;
+	padding-bottom: 40px;
+
+	h1 {
+		font-size: 1.4em;
+		font-weight: 700;
+		margin: 0;
+	}
+}
+
+div.feature-image {
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	background-color: #fff;
+	img {
+		width: 100%;
+	}
+}
+
+div.feature-desc {
+	background-color: #fff;
+	padding-top: 40px;
+	padding-left: 20px;
+	padding-bottom: 20px;
+	border: none;
+
+}
+
+div.checklist {
+	ul.features {
+		padding: 8px;
+		i {
+			padding-left: 10px;
+			padding-right: 20px;
+		}
+		li {
+			letter-spacing: 0.06em;
+			font-size: 1.4em;
+			font-weight: 300;
+		}
+	}
+}
+
 div.customers {
 	background-color: #fff;
 	padding-top: 40px;
