--- a/pages/features.tmpl
+++ b/pages/features.tmpl
@@ -2,8 +2,8 @@
 
 	<div class="intro">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-lg-6 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<h1>Deploy and manage any app</h1>
 					<h2>Free for one developer, scalable for large teams</h2>
 					<div class="buttons">
@@ -13,7 +13,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="col-12 col-lg-5 col-xl-5 col-xxl-5 pt-5 pt-lg-0">
+				<div class="p-2">
 					<div class="text-left checklist" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
 						<ul class="fa-ul features">
 							<li><i class="fa-li fa fa-check"></i>Easy Configuration</li>
@@ -34,20 +34,20 @@
 
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
-					<div class="card feature-desc">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
+					<div class="feature-desc pt-4">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Easy Configuration</h1>
 						</div>
-						<div class="card-body">
+						<div class="card-body" style="text-align">
 							Setup a production ready Kubernetes or ECS cluster in minutes with one click.
 							No fussing with templates or scripts.
 						</div>
 					</div>
 				</div>
-				<div class="col-12 col-xl-6 col-xxl-6">
-					<div class="feature-image">
+				<div class="p-2">
+					<div class="feature-image pt-4">
 						<img src="/images/features/add_rack.png">
 					</div>
 				</div>
@@ -56,9 +56,9 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
-					<div class="feature-desc">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
+					<div class="feature-desc pt-4">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Continuous Delivery</h1>
 						</div>
@@ -68,19 +68,18 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/features/workflow.png">
 					</div>
 				</div>
-				
 			</div>
 		</div>
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Infrastructure as Code</h1>
@@ -91,7 +90,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/features/convox_yml.png">
 					</div>
@@ -102,8 +101,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Local Development</h1>
@@ -114,7 +113,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/terminals/convox_start.gif">
 					</div>
@@ -125,8 +124,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Secrets Management</h1>
@@ -136,7 +135,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/features/secrets_store.png">
 					</div>
@@ -147,8 +146,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Zero Downtime Deploys</h1>
@@ -158,7 +157,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/features/rolling_deploy.png">
 					</div>
@@ -169,8 +168,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>One-Click Rollbacks</h1>
@@ -180,7 +179,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/features/rollback.png">
 					</div>
@@ -191,8 +190,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Audit Trails</h1>
@@ -203,7 +202,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/features/audit_log.png">
 					</div>
@@ -213,8 +212,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="row">
-				<div class="col-12 col-xl-6 col-xxl-6">
+			<div class="d-flex flex-md-row flex-column justify-content-center">
+				<div class="p-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Secure by Default</h1>
@@ -225,7 +224,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="col-12 col-xl-6 col-xxl-6">
+				 <div class="p-2">
 					<div class="feature-image">
 						<img src="/images/features/security.png">
 					</div>
