--- a/pages/features.tmpl
+++ b/pages/features.tmpl
@@ -34,9 +34,9 @@
 
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
-					<div class="feature-desc pt-4">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4 mt-4 mt-md-2">
+					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Easy Configuration</h1>
 						</div>
@@ -46,8 +46,8 @@
 						</div>
 					</div>
 				</div>
-				<div class="p-2">
-					<div class="feature-image pt-4">
+				<div class="p-2 pt-4 mt-4 mt-md-2">
+					<div class="feature-image">
 						<img src="/images/features/add_rack.png">
 					</div>
 				</div>
@@ -56,9 +56,9 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
-					<div class="feature-desc pt-4">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4 mt-4 mt-md-2">
+					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Continuous Delivery</h1>
 						</div>
@@ -68,7 +68,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4 mt-4 mt-md-2">
 					<div class="feature-image">
 						<img src="/images/features/workflow.png">
 					</div>
@@ -78,8 +78,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Infrastructure as Code</h1>
@@ -90,7 +90,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4">
 					<div class="feature-image">
 						<img src="/images/features/convox_yml.png">
 					</div>
@@ -101,8 +101,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Local Development</h1>
@@ -113,7 +113,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4">
 					<div class="feature-image">
 						<img src="/images/terminals/convox_start.gif">
 					</div>
@@ -124,8 +124,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Secrets Management</h1>
@@ -135,7 +135,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4">
 					<div class="feature-image">
 						<img src="/images/features/secrets_store.png">
 					</div>
@@ -146,18 +146,18 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Zero Downtime Deploys</h1>
 						</div>
 						<div class="card-body">
-							Lighting fast, rolling deploys including running migrations with zero downtime.
+							Lighting fast, rolling deploys including running migrations or any other pre or post deployment scripts, with zero downtime.
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4">
 					<div class="feature-image">
 						<img src="/images/features/rolling_deploy.png">
 					</div>
@@ -168,8 +168,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>One-Click Rollbacks</h1>
@@ -179,7 +179,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4">
 					<div class="feature-image">
 						<img src="/images/features/rollback.png">
 					</div>
@@ -190,8 +190,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Audit Trails</h1>
@@ -202,7 +202,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4">
 					<div class="feature-image">
 						<img src="/images/features/audit_log.png">
 					</div>
@@ -212,8 +212,8 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Secure by Default</h1>
@@ -224,7 +224,7 @@
 						</div>
 					</div>
 				</div>
-				 <div class="p-2">
+				 <div class="p-2 pt-4">
 					<div class="feature-image">
 						<img src="/images/features/security.png">
 					</div>
