--- a/pages/features.tmpl
+++ b/pages/features.tmpl
@@ -226,7 +226,7 @@
 				</div>
 				 <div class="p-2 pt-4">
 					<div class="feature-image">
-						<img src="/images/features/security.png">
+						<img src="/images/features/rbac.png">
 					</div>
 				</div>
 				
