--- a/pages/features.tmpl
+++ b/pages/features.tmpl
@@ -2,10 +2,11 @@
 
 	<div class="intro">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center">
-				<div class="p-2">
+			<div class="d-flex flex-md-row flex-column justify-content-between">
+				<div class="p-2 pt-2 mt-2 mt-md-1">
 					<h1>Deploy and manage any app</h1>
-					<h2>Free for one developer, scalable for large teams</h2>
+					<h2>Free for one developer<h2>
+					<h2>scales to meet the needs of large teams</h2>
 					<div class="buttons">
 						<a class="btn btn-primary text-light" href="https://docs.convox.com/introduction/getting-started">
 							Get Started
@@ -13,16 +14,16 @@
 						</a>
 					</div>
 				</div>
-				<div class="p-2">
+				<div class="p-2 pt-4 mt-4 mt-md-2">
 					<div class="text-left checklist" style="background-color: rgb(18,24,31); border-radius: 8px; padding: 12px">
 						<ul class="fa-ul features">
 							<li><i class="fa-li fa fa-check"></i>Easy Configuration</li>
 							<li><i class="fa-li fa fa-check"></i>Continuous Delivery</li>
 							<li><i class="fa-li fa fa-check"></i>Infrastructure as Code</li>
 							<li><i class="fa-li fa fa-check"></i>Local Development</li>
-							<li><i class="fa-li fa fa-check"></i>Secrets Management</li>
 							<li><i class="fa-li fa fa-check"></i>Zero Downtime Deploys</li>
 							<li><i class="fa-li fa fa-check"></i>One-Click Rollbacks</li>
+							<li><i class="fa-li fa fa-check"></i>Secrets Management</li>
 							<li><i class="fa-li fa fa-check"></i>Audit Trails</li>
 							<li><i class="fa-li fa fa-check"></i>Secure by Default</li>
 						</ul>
@@ -31,10 +32,9 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4 mt-4 mt-md-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
@@ -56,7 +56,7 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4 mt-4 mt-md-2">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
@@ -78,14 +78,14 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
 							<h1>Infrastructure as Code</h1>
 						</div>
 						<div class="card-body">
-							One file to rule them all! Configure your entire environment from local development through to staging and production with a single yaml file. 
+							GitOps made easy. Configure your entire environment from local development through to staging and production with a single yaml file. 
 							No more maintaining and synchronizing massive templates and scripts.
 						</div>
 					</div>
@@ -101,7 +101,7 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
@@ -124,29 +124,7 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
-				<div class="p-2 pt-4">
-					<div class="feature-desc">
-						<div class="card-header" style="background-color: #fff">
-							<h1>Secrets Management</h1>
-						</div>
-						<div class="card-body">
-							Securely store secrets, passwords, tokens and keys in an encrypted vault isolated per environment.
-						</div>
-					</div>
-				</div>
-				 <div class="p-2 pt-4">
-					<div class="feature-image">
-						<img src="/images/features/secrets_store.png">
-					</div>
-				</div>
-				
-			</div>
-		</div>
-	</div>
-	<div class="feature">
-		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
@@ -168,7 +146,7 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
@@ -188,9 +166,31 @@
 			</div>
 		</div>
 	</div>
+		<div class="feature">
+		<div class="container">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
+				<div class="p-2 pt-4">
+					<div class="feature-desc">
+						<div class="card-header" style="background-color: #fff">
+							<h1>Secrets Management</h1>
+						</div>
+						<div class="card-body">
+							Securely store secrets, passwords, tokens and keys in an encrypted vault isolated per environment.
+						</div>
+					</div>
+				</div>
+				 <div class="p-2 pt-4">
+					<div class="feature-image">
+						<img src="/images/features/secrets_store.png">
+					</div>
+				</div>
+				
+			</div>
+		</div>
+	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
@@ -212,7 +212,7 @@
 	</div>
 	<div class="feature">
 		<div class="container">
-			<div class="d-flex flex-md-row flex-column justify-content-center align-items-center">
+			<div class="d-flex flex-md-row flex-column justify-content-between align-items-top">
 				<div class="p-2 pt-4">
 					<div class="feature-desc">
 						<div class="card-header" style="background-color: #fff">
