add features to nav

--- a/pages/layout.tmpl
+++ b/pages/layout.tmpl
@@ -29,6 +29,7 @@
 
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="navbar-nav ml-auto mr-2">
+							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "features" }}active{{ end }}"><a class="nav-link" href="/features">Blog</a></li>
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "blog" }}active{{ end }}"><a class="nav-link" href="/blog">Blog</a></li>
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0"><a class="nav-link" href="https://docs.convox.com">Documentation</a></li>
 							<li class="nav-item ml-1 ml-md-4 mr-4 mr-md-0 {{ if eq .Active "pricing" }}active{{ end }}"><a class="nav-link" href="/pricing">Pricing</a></li>
