--- a/assets/site.scss
+++ b/assets/site.scss
@@ -166,7 +166,10 @@ div.feature-image {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	background-color: #fff;
 	img {
-		max-width: 600px;
+		width: 100%;
+		@include media-breakpoint-up(lg) {
+			width: 600px;
+		}
 	}
 }
 
