--- a/pages/features.tmpl
+++ b/pages/features.tmpl
@@ -47,7 +47,7 @@
 					</div>
 				</div>
 				<div class="p-2 pt-4 mt-4 mt-md-2">
-					<div class="feature-image">
+					<div class="feature-image image-responsive">
 						<img src="/images/features/add_rack.png">
 					</div>
 				</div>
@@ -69,7 +69,7 @@
 					</div>
 				</div>
 				 <div class="p-2 pt-4 mt-4 mt-md-2">
-					<div class="feature-image">
+					<div class="feature-image image-responsive">
 						<img src="/images/features/workflow.png">
 					</div>
 				</div>
