--- a/assets/site.scss
+++ b/assets/site.scss
@@ -239,6 +239,25 @@ div.quotes {
 	}
 }
 
+div.enterprise-features {
+	padding-top: 40px;
+	padding-bottom: 40px;
+	background-color: #e3e6e9;
+	text-align: center;
+
+	.description{
+		font-size: 1.2em;
+		margin-bottom: 6px;
+		margin-top: 12px;
+	}
+	h1 {
+		color: #555;
+		font-size: 2.2rem;
+		margin: 0;
+		margin-bottom: 50px;
+	}
+}
+
 div.terms {
 	background-color: #fff;
 	padding: 20px;
