--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -22,7 +22,7 @@
     <div class="d-flex flex-md-row flex-column justify-content-between">
       <div class="p-2 pt-2 mt-2 mt-md-1">
         <i class="fas fa-clipboard-check fa-3x"></i>
-        <p class="description">Meet your compliance needs: PCI / HIPAA / SOC2/ GDPR</p>
+        <p class="description">Satisfy PCI / HIPAA / SOC2/ GDPR with a self-hosted console inside your VPC</p>
       </div>
       <div class="p-2 pt-2 mt-2 mt-md-1">
         <i class="fas fa-cloud-upload-alt fa-3x"></i>
