--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -17,21 +17,22 @@
   </div>
 </div>
 <div class="enterprise-features">
-  <div class="container text-center">
+  <div class="container">
     <h1>Centrally manage your containers with Kubernetes</h1>
-    <div class="d-flex flex-md-row flex-column justify-content-between">
-      <div class="p-2 pt-2 mt-2 mt-md-1">
+    <div class="d-flex flex-md-row flex-column align-items-top">
+      <div class="p-2 pt-4 mt-4 mt-md-2">
         <i class="fas fa-clipboard-check fa-3x"></i>
         <p class="description">Satisfy PCI / HIPAA / SOC2/ GDPR with a self-hosted console inside your VPC</p>
       </div>
-      <div class="p-2 pt-2 mt-2 mt-md-1">
-        <i class="fas fa-cloud-upload-alt fa-3x"></i>
-        <p class="description">Enterprise grade scalability and reliability running on AWS Native infrastructure</p>
-      </div>
-      <div class="p-2 pt-2 mt-2 mt-md-1">
+            <div class="p-2 pt-4 mt-4 mt-md-2">
         <i class="fas fa-phone fa-3x"></i>
         <p class="description">24x7 support with a one hour SLA</p>
       </div>
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-cloud-upload-alt fa-3x"></i>
+        <p class="description">Enterprise grade scalability and reliability running on AWS Native infrastructure</p>
+      </div>
+
     </div>
   </div>
 </div>
