--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -1,5 +1,5 @@
 {{ define "content" }}
-<div class="intro">
+<div class="enterprise-intro">
   <div class="container">
     <div class="d-flex flex-md-row flex-column justify-content-between">
       <div class="p-2 pt-2 mt-2 mt-md-1">
@@ -8,7 +8,7 @@
             <h2>Meet your security and compliance needs</h2>
             <div class="buttons">
               <a class="btn btn-primary text-light" href="mailto:sales@convox.com?subject=Enterprise inquiry">
-                Learn More
+                Get a Quote
                 <i class="far fa-arrow-alt-circle-right ml-1"></i>
               </a>
             </div>
@@ -22,17 +22,16 @@
     <div class="d-flex flex-md-row flex-column align-items-top">
       <div class="p-2 pt-4 mt-4 mt-md-2">
         <i class="fas fa-clipboard-check fa-3x"></i>
-        <p class="description">Satisfy PCI / HIPAA / SOC2/ GDPR with a self-hosted console inside your VPC</p>
+        <p class="description">Satisfy PCI / HIPAA / SOC2/ GDPR with a self-hosting inside your VPC</p>
       </div>
-            <div class="p-2 pt-4 mt-4 mt-md-2">
-        <i class="fas fa-phone fa-3x"></i>
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-life-ring fa-3x"></i>
         <p class="description">24x7 support with a one hour SLA</p>
       </div>
       <div class="p-2 pt-4 mt-4 mt-md-2">
         <i class="fas fa-cloud-upload-alt fa-3x"></i>
         <p class="description">Enterprise grade scalability and reliability running on AWS Native infrastructure</p>
       </div>
-
     </div>
   </div>
 </div>
@@ -119,12 +118,6 @@
         reduce our scope on countless PCI compliance requirements. No tool or architecture we've used has helped with
         PCI compliance hurdles nearly as much as Convox.
         <footer class="blockquote-footer">Ryan Jackson, <cite><a href="https://smrtsystems.com/">SMRT</a></cite>
-        </footer>
-      </blockquote>
-      <blockquote class="blockquote p-2 pt-4 mt-4 mt-md-2">
-        Convox is incredibly easy use and maintain and it plugs into our existing AWS setup. Now that our team has a
-        private and secure PaaS, managing all our internal business apps is a breeze.
-        <footer class="blockquote-footer">Chris LeBlanc, <cite><a href="https://www.arthrex.com/">Arthrex</a></cite>
         </footer>
       </blockquote>
     </div>
