--- a/assets/site.scss
+++ b/assets/site.scss
@@ -257,6 +257,46 @@ div.enterprise-features {
 		margin-bottom: 50px;
 	}
 }
+div.enterprise-intro {
+	color: #fff;
+	display: block;
+	padding-top: 60px;
+	padding-bottom: 70px;
+	position: relative;
+
+
+	h1, h2 {
+		letter-spacing: 0.08em;
+	}
+
+	h1 {
+		font-size: 3.2em;
+		font-weight: 700;
+	}
+
+	h2 {
+		color: #999;
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+
+	h3 {
+		letter-spacing: 0.06em;
+		margin-top: 10px;
+		font-size: 1.4em;
+		font-weight: 300;
+	}
+
+	div.buttons {
+		margin-top: 60px;
+
+		.btn {
+			padding: 10px 20px;
+			padding-right: 18px;
+			font-size: 1.3em;
+		}
+	}
+}
 
 div.terms {
 	background-color: #fff;
