--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -19,21 +19,52 @@
 <div class="enterprise-features">
   <div class="container">
     <h1>Centrally manage your containers with Kubernetes</h1>
-    <div class="d-flex flex-md-row flex-column align-items-top">
+    <div class="d-flex flex-md-row flex-column align-items-top justify-content-around">
       <div class="p-2 pt-4 mt-4 mt-md-2">
         <i class="fas fa-clipboard-check fa-3x"></i>
         <p class="description">Satisfy PCI / HIPAA / SOC2/ GDPR with a self-hosting inside your VPC</p>
       </div>
       <div class="p-2 pt-4 mt-4 mt-md-2">
-        <i class="fas fa-life-ring fa-3x"></i>
-        <p class="description">24x7 support with a one hour SLA</p>
+        <i class="fas fa-cloud-upload-alt fa-3x"></i>
+        <p class="description">Setup all your security and network configurations once rather than every time you deploy
+          a new app</p>
       </div>
       <div class="p-2 pt-4 mt-4 mt-md-2">
         <i class="fas fa-cloud-upload-alt fa-3x"></i>
         <p class="description">Enterprise grade scalability and reliability running on AWS Native infrastructure</p>
       </div>
     </div>
+    <div class="d-flex flex-md-row flex-column align-items-top justify-content-around">
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-cloud-upload-alt fa-3x"></i>
+        <p class="description">Full audit logging keeps a complete history of every change and who made it</p>
+      </div>
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-cloud-upload-alt fa-3x"></i>
+        <p class="description">Enforceable hardware token two factor authentication</p>
+      </div>
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-cloud-upload-alt fa-3x"></i>
+        <p class="description">Role based access control and enforced SSO</p>
+      </div>
+    </div>
+    <div class="d-flex flex-md-row flex-column align-items-top justify-content-around">
+
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-cloud-upload-alt fa-3x"></i>
+        <p class="description">Optimize cost with smart autoscaling and spot instance options</p>
+      </div>
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-cloud-upload-alt fa-3x"></i>
+        <p class="description">Deploy a mixture of internet facing and internal only applications</p>
+      </div>
+      <div class="p-2 pt-4 mt-4 mt-md-2">
+        <i class="fas fa-life-ring fa-3x"></i>
+        <p class="description">24x7 support with a one hour SLA</p>
+      </div>
+    </div>
   </div>
+</div>
 </div>
 <div class="customers d-block">
   <div class="container text-center">
