--- a/assets/site.scss
+++ b/assets/site.scss
@@ -250,6 +250,10 @@ div.enterprise-features {
 		margin-bottom: 6px;
 		margin-top: 12px;
 	}
+	.desc {
+		background-color: #fff;
+		border: none;
+	}
 	h1 {
 		color: #555;
 		font-size: 2.2rem;
@@ -257,6 +261,7 @@ div.enterprise-features {
 		margin-bottom: 50px;
 	}
 }
+
 div.enterprise-intro {
 	color: #fff;
 	display: block;
