--- a/pages/enterprise.tmpl
+++ b/pages/enterprise.tmpl
@@ -3,9 +3,9 @@
   <div class="container">
     <div class="d-flex flex-md-row flex-column justify-content-between">
       <div class="p-2 pt-2 mt-2 mt-md-1">
-        <h1>Your private container management platform</h1>
+        <h1>Your Private Container Management Platform</h1>
         <h2>Maximize Developer Productivity<h2>
-            <h2>Meet your security and compliance needs</h2>
+            <h2>Meet Your Security and Compliance Needs</h2>
             <div class="buttons">
               <a class="btn btn-primary text-light" href="mailto:sales@convox.com?subject=Enterprise inquiry">
                 Get a Quote
@@ -18,7 +18,7 @@
 </div>
 <div class="enterprise-features">
   <div class="container">
-    <h1>The scalability of the cloud the security of the data center</h1>
+    <h1>The scalability of the cloud with the privacy of a data center</h1>
     <div class="d-flex flex-md-row flex-column align-items-top justify-content-around">
       <div class="p-2 pt-4 mt-4 mt-md-2" style="flex-basis:33%; flex-grow: 0;">
         <div class="desc">
@@ -26,7 +26,7 @@
             <i class="fas fa-dharmachakra fa-3x"></i>
           </div>
           <div class="card-body">
-            Manage Kubernetes clusters and standalone containers
+            Built on Docker and Kubernetes
           </div>
         </div>
       </div>
@@ -59,7 +59,7 @@
             <i class="fas fa-id-badge fa-3x"></i>
           </div>
           <div class="card-body">
-            Role based access control and enforced SSO
+            Role based access control and enforced SSO including hardware key 2FA
           </div>
         </div>
       </div>
